Define specification for posts and comments routes
Define SecurityScheme in BaseController
Refactor existing specification for login and register routes
