# app/Http/Controllers/Controller.php
@@ -9,21 +9,18 @@ use Illuminate\Routing\Controller as BaseController;
 
 /**
  * @OA\Info(
- *      version="1.0.0",
- *      title="Blog Laravel OpenApi",
- *      description="Blog Laravel Swagger OpenApi",
- *      @OA\Contact(
- *          email="darius@matulionis.lt"
- *      ),
+ *     version="1.0.0",
+ *     title="Blog Laravel OpenApi",
+ *     description="Blog Laravel Swagger OpenApi",
  *     @OA\License(
  *         name="Apache 2.0",
  *         url="https://www.apache.org/licenses/LICENSE-2.0.html"
  *     )
  * )
- * @OA\Get(
- *     path="/",
- *     description="Home page",
- *     @OA\Response(response="default", description="Welcome page")
+ * @OA\SecurityScheme(
+ *     securityScheme="bearerAuth",
+ *     type="http",
+ *     scheme="bearer"
  * )
  */
 class Controller extends BaseController
